LabA/src/ParJL.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParJL.y
-----------------------------------------------------------------------------

state 92 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pListDef -> ListDef                         (2)
	%start_pArg -> Arg                                 (3)
	%start_pListArg -> ListArg                         (4)
	%start_pStm -> Stm                                 (5)
	%start_pReturnRest -> ReturnRest                   (6)
	%start_pIfRest -> IfRest                           (7)
	%start_pIfRestRest -> IfRestRest                   (8)
	%start_pListStm -> ListStm                         (9)
	%start_pExp15 -> Exp15                             (10)
	%start_pExp14 -> Exp14                             (11)
	%start_pExp13 -> Exp13                             (12)
	%start_pExp12 -> Exp12                             (13)
	%start_pExp11 -> Exp11                             (14)
	%start_pExp9 -> Exp9                               (15)
	%start_pExp8 -> Exp8                               (16)
	%start_pExp4 -> Exp4                               (17)
	%start_pExp3 -> Exp3                               (18)
	%start_pExp2 -> Exp2                               (19)
	%start_pExp -> Exp                                 (20)
	%start_pExp1 -> Exp1                               (21)
	%start_pExp5 -> Exp5                               (22)
	%start_pExp6 -> Exp6                               (23)
	%start_pExp7 -> Exp7                               (24)
	%start_pExp10 -> Exp10                             (25)
	%start_pListExp -> ListExp                         (26)
	%start_pType -> Type                               (27)
	%start_pListId -> ListId                           (28)
	String -> L_quoted                                 (29)
	Integer -> L_integ                                 (30)
	Double -> L_doubl                                  (31)
	Id -> L_Id                                         (32)
	Program -> ListDef                                 (33)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (34)
	ListDef ->                                         (35)
	ListDef -> ListDef Def                             (36)
	Arg -> Type Id                                     (37)
	ListArg ->                                         (38)
	ListArg -> Arg                                     (39)
	ListArg -> Arg ',' ListArg                         (40)
	Stm -> Exp ';'                                     (41)
	Stm -> Type ListId ';'                             (42)
	Stm -> Type ListId '=' Exp ';'                     (43)
	Stm -> 'return' ReturnRest                         (44)
	Stm -> 'while' '(' Exp ')' Stm                     (45)
	Stm -> '{' ListStm '}'                             (46)
	Stm -> 'if' '(' Exp ')' IfRest                     (47)
	ReturnRest -> Exp ';'                              (48)
	ReturnRest -> ';'                                  (49)
	IfRest -> Stm IfRestRest                           (50)
	IfRest -> ';'                                      (51)
	IfRestRest -> 'else' Stm                           (52)
	IfRestRest ->                                      (53)
	ListStm ->                                         (54)
	ListStm -> ListStm Stm                             (55)
	Exp15 -> 'true'                                    (56)
	Exp15 -> 'false'                                   (57)
	Exp15 -> String                                    (58)
	Exp15 -> Integer                                   (59)
	Exp15 -> Double                                    (60)
	Exp15 -> Id                                        (61)
	Exp15 -> Id '(' ListExp ')'                        (62)
	Exp15 -> '(' Exp ')'                               (63)
	Exp14 -> '-' Exp14                                 (64)
	Exp14 -> '!' Exp14                                 (65)
	Exp14 -> Exp15 '++'                                (66)
	Exp14 -> Exp15 '--'                                (67)
	Exp14 -> Exp15                                     (68)
	Exp13 -> '++' Exp14                                (69)
	Exp13 -> '--' Exp14                                (70)
	Exp13 -> Exp14                                     (71)
	Exp12 -> Exp12 '*' Exp13                           (72)
	Exp12 -> Exp12 '/' Exp13                           (73)
	Exp12 -> Exp12 '%' Exp13                           (74)
	Exp12 -> Exp13                                     (75)
	Exp11 -> Exp11 '+' Exp12                           (76)
	Exp11 -> Exp11 '-' Exp12                           (77)
	Exp11 -> Exp12                                     (78)
	Exp9 -> Exp10 '<' Exp10                            (79)
	Exp9 -> Exp10 '>' Exp10                            (80)
	Exp9 -> Exp10 '<=' Exp10                           (81)
	Exp9 -> Exp10 '>=' Exp10                           (82)
	Exp9 -> Exp10                                      (83)
	Exp8 -> Exp9 '==' Exp9                             (84)
	Exp8 -> Exp9 '!=' Exp9                             (85)
	Exp8 -> Exp9                                       (86)
	Exp4 -> Exp4 '&&' Exp5                             (87)
	Exp4 -> Exp5                                       (88)
	Exp3 -> Exp3 '||' Exp4                             (89)
	Exp3 -> Exp4                                       (90)
	Exp2 -> Exp3 '=' Exp2                              (91)
	Exp2 -> Exp3                                       (92)
	Exp -> Exp1                                        (93)
	Exp1 -> Exp2                                       (94)
	Exp5 -> Exp6                                       (95)
	Exp6 -> Exp7                                       (96)
	Exp7 -> Exp8                                       (97)
	Exp10 -> Exp11                                     (98)
	ListExp ->                                         (99)
	ListExp -> Exp                                     (100)
	ListExp -> Exp ',' ListExp                         (101)
	Type -> 'true'                                     (102)
	Type -> 'false'                                    (103)
	Type -> 'int'                                      (104)
	Type -> 'double'                                   (105)
	Type -> 'void'                                     (106)
	Type -> 'string'                                   (107)
	Type -> 'bool_undef'                               (108)
	Type -> 'boolean'                                  (109)
	ListId -> Id                                       (110)
	ListId -> Id ',' ListId                            (111)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'/'            { PT _ (TS _ 13) }
	';'            { PT _ (TS _ 14) }
	'<'            { PT _ (TS _ 15) }
	'<='           { PT _ (TS _ 16) }
	'='            { PT _ (TS _ 17) }
	'=='           { PT _ (TS _ 18) }
	'>'            { PT _ (TS _ 19) }
	'>='           { PT _ (TS _ 20) }
	'bool_undef'   { PT _ (TS _ 21) }
	'boolean'      { PT _ (TS _ 22) }
	'double'       { PT _ (TS _ 23) }
	'else'         { PT _ (TS _ 24) }
	'false'        { PT _ (TS _ 25) }
	'if'           { PT _ (TS _ 26) }
	'int'          { PT _ (TS _ 27) }
	'return'       { PT _ (TS _ 28) }
	'string'       { PT _ (TS _ 29) }
	'true'         { PT _ (TS _ 30) }
	'void'         { PT _ (TS _ 31) }
	'while'        { PT _ (TS _ 32) }
	'{'            { PT _ (TS _ 33) }
	'||'           { PT _ (TS _ 34) }
	'}'            { PT _ (TS _ 35) }
	L_quoted       { PT _ (TL $$) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pListDef rule  2
	%start_pArg     rule  3
	%start_pListArg rule  4
	%start_pStm     rule  5
	%start_pReturnRest rule  6
	%start_pIfRest  rule  7
	%start_pIfRestRest rule  8
	%start_pListStm rule  9
	%start_pExp15   rule  10
	%start_pExp14   rule  11
	%start_pExp13   rule  12
	%start_pExp12   rule  13
	%start_pExp11   rule  14
	%start_pExp9    rule  15
	%start_pExp8    rule  16
	%start_pExp4    rule  17
	%start_pExp3    rule  18
	%start_pExp2    rule  19
	%start_pExp     rule  20
	%start_pExp1    rule  21
	%start_pExp5    rule  22
	%start_pExp6    rule  23
	%start_pExp7    rule  24
	%start_pExp10   rule  25
	%start_pListExp rule  26
	%start_pType    rule  27
	%start_pListId  rule  28
	String          rule  29
	Integer         rule  30
	Double          rule  31
	Id              rule  32
	Program         rule  33
	Def             rule  34
	ListDef         rules 35, 36
	Arg             rule  37
	ListArg         rules 38, 39, 40
	Stm             rules 41, 42, 43, 44, 45, 46, 47
	ReturnRest      rules 48, 49
	IfRest          rules 50, 51
	IfRestRest      rules 52, 53
	ListStm         rules 54, 55
	Exp15           rules 56, 57, 58, 59, 60, 61, 62, 63
	Exp14           rules 64, 65, 66, 67, 68
	Exp13           rules 69, 70, 71
	Exp12           rules 72, 73, 74, 75
	Exp11           rules 76, 77, 78
	Exp9            rules 79, 80, 81, 82, 83
	Exp8            rules 84, 85, 86
	Exp4            rules 87, 88
	Exp3            rules 89, 90
	Exp2            rules 91, 92
	Exp             rule  93
	Exp1            rule  94
	Exp5            rule  95
	Exp6            rule  96
	Exp7            rule  97
	Exp10           rule  98
	ListExp         rules 99, 100, 101
	Type            rules 102, 103, 104, 105, 106, 107, 108, 109
	ListId          rules 110, 111

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool_undef'   reduce using rule 35
	'boolean'      reduce using rule 35
	'double'       reduce using rule 35
	'false'        reduce using rule 35
	'int'          reduce using rule 35
	'string'       reduce using rule 35
	'true'         reduce using rule 35
	'void'         reduce using rule 35
	%eof           reduce using rule 35

	Program        goto state 114
	ListDef        goto state 115

State 1


	'bool_undef'   shift, and enter state 35
	'boolean'      shift, and enter state 36
	'double'       shift, and enter state 37
	'false'        shift, and enter state 38
	'int'          shift, and enter state 39
	'string'       shift, and enter state 40
	'true'         shift, and enter state 41
	'void'         shift, and enter state 42

	Def            goto state 112
	Type           goto state 113

State 2


	'bool_undef'   reduce using rule 35
	'boolean'      reduce using rule 35
	'double'       reduce using rule 35
	'false'        reduce using rule 35
	'int'          reduce using rule 35
	'string'       reduce using rule 35
	'true'         reduce using rule 35
	'void'         reduce using rule 35
	%eof           reduce using rule 35

	ListDef        goto state 111

State 3


	'bool_undef'   shift, and enter state 35
	'boolean'      shift, and enter state 36
	'double'       shift, and enter state 37
	'false'        shift, and enter state 38
	'int'          shift, and enter state 39
	'string'       shift, and enter state 40
	'true'         shift, and enter state 41
	'void'         shift, and enter state 42

	Arg            goto state 110
	Type           goto state 109

State 4


	'bool_undef'   shift, and enter state 35
	'boolean'      shift, and enter state 36
	'double'       shift, and enter state 37
	'false'        shift, and enter state 38
	'int'          shift, and enter state 39
	'string'       shift, and enter state 40
	'true'         shift, and enter state 41
	'void'         shift, and enter state 42
	%eof           reduce using rule 38

	Arg            goto state 107
	ListArg        goto state 108
	Type           goto state 109

State 5


	'!'            shift, and enter state 64
	'('            shift, and enter state 65
	'++'           shift, and enter state 66
	'-'            shift, and enter state 67
	'--'           shift, and enter state 68
	'bool_undef'   shift, and enter state 35
	'boolean'      shift, and enter state 36
	'double'       shift, and enter state 37
	'false'        shift, and enter state 97
	'if'           shift, and enter state 98
	'int'          shift, and enter state 39
	'return'       shift, and enter state 99
	'string'       shift, and enter state 40
	'true'         shift, and enter state 100
	'void'         shift, and enter state 42
	'while'        shift, and enter state 101
	'{'            shift, and enter state 102
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	Stm            goto state 106
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp4           goto state 54
	Exp3           goto state 55
	Exp2           goto state 56
	Exp            goto state 94
	Exp1           goto state 58
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61
	Exp10          goto state 62
	Type           goto state 95

State 6


	'!'            shift, and enter state 64
	'('            shift, and enter state 65
	'++'           shift, and enter state 66
	'-'            shift, and enter state 67
	'--'           shift, and enter state 68
	';'            shift, and enter state 105
	'false'        shift, and enter state 69
	'true'         shift, and enter state 70
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	ReturnRest     goto state 103
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp4           goto state 54
	Exp3           goto state 55
	Exp2           goto state 56
	Exp            goto state 104
	Exp1           goto state 58
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61
	Exp10          goto state 62

State 7


	'!'            shift, and enter state 64
	'('            shift, and enter state 65
	'++'           shift, and enter state 66
	'-'            shift, and enter state 67
	'--'           shift, and enter state 68
	';'            shift, and enter state 96
	'bool_undef'   shift, and enter state 35
	'boolean'      shift, and enter state 36
	'double'       shift, and enter state 37
	'false'        shift, and enter state 97
	'if'           shift, and enter state 98
	'int'          shift, and enter state 39
	'return'       shift, and enter state 99
	'string'       shift, and enter state 40
	'true'         shift, and enter state 100
	'void'         shift, and enter state 42
	'while'        shift, and enter state 101
	'{'            shift, and enter state 102
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	Stm            goto state 92
	IfRest         goto state 93
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp4           goto state 54
	Exp3           goto state 55
	Exp2           goto state 56
	Exp            goto state 94
	Exp1           goto state 58
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61
	Exp10          goto state 62
	Type           goto state 95

State 8


	'else'         shift, and enter state 91
	%eof           reduce using rule 53

	IfRestRest     goto state 90

State 9


	'!'            reduce using rule 54
	'('            reduce using rule 54
	'++'           reduce using rule 54
	'-'            reduce using rule 54
	'--'           reduce using rule 54
	'bool_undef'   reduce using rule 54
	'boolean'      reduce using rule 54
	'double'       reduce using rule 54
	'false'        reduce using rule 54
	'if'           reduce using rule 54
	'int'          reduce using rule 54
	'return'       reduce using rule 54
	'string'       reduce using rule 54
	'true'         reduce using rule 54
	'void'         reduce using rule 54
	'while'        reduce using rule 54
	'{'            reduce using rule 54
	L_quoted       reduce using rule 54
	L_integ        reduce using rule 54
	L_doubl        reduce using rule 54
	L_Id           reduce using rule 54
	%eof           reduce using rule 54

	ListStm        goto state 89

State 10


	'('            shift, and enter state 65
	'false'        shift, and enter state 69
	'true'         shift, and enter state 70
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	Exp15          goto state 88

State 11


	'!'            shift, and enter state 64
	'('            shift, and enter state 65
	'-'            shift, and enter state 67
	'false'        shift, and enter state 69
	'true'         shift, and enter state 70
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	Exp15          goto state 47
	Exp14          goto state 87

State 12


	'!'            shift, and enter state 64
	'('            shift, and enter state 65
	'++'           shift, and enter state 66
	'-'            shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 70
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 86

State 13


	'!'            shift, and enter state 64
	'('            shift, and enter state 65
	'++'           shift, and enter state 66
	'-'            shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 70
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 85

State 14


	'!'            shift, and enter state 64
	'('            shift, and enter state 65
	'++'           shift, and enter state 66
	'-'            shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 70
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 84

State 15


	'!'            shift, and enter state 64
	'('            shift, and enter state 65
	'++'           shift, and enter state 66
	'-'            shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 70
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 83
	Exp10          goto state 62

State 16


	'!'            shift, and enter state 64
	'('            shift, and enter state 65
	'++'           shift, and enter state 66
	'-'            shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 70
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 82
	Exp10          goto state 62

State 17


	'!'            shift, and enter state 64
	'('            shift, and enter state 65
	'++'           shift, and enter state 66
	'-'            shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 70
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp4           goto state 81
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61
	Exp10          goto state 62

State 18


	'!'            shift, and enter state 64
	'('            shift, and enter state 65
	'++'           shift, and enter state 66
	'-'            shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 70
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp4           goto state 54
	Exp3           goto state 80
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61
	Exp10          goto state 62

State 19


	'!'            shift, and enter state 64
	'('            shift, and enter state 65
	'++'           shift, and enter state 66
	'-'            shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 70
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp4           goto state 54
	Exp3           goto state 55
	Exp2           goto state 79
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61
	Exp10          goto state 62

State 20


	'!'            shift, and enter state 64
	'('            shift, and enter state 65
	'++'           shift, and enter state 66
	'-'            shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 70
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp4           goto state 54
	Exp3           goto state 55
	Exp2           goto state 56
	Exp            goto state 78
	Exp1           goto state 58
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61
	Exp10          goto state 62

State 21


	'!'            shift, and enter state 64
	'('            shift, and enter state 65
	'++'           shift, and enter state 66
	'-'            shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 70
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp4           goto state 54
	Exp3           goto state 55
	Exp2           goto state 56
	Exp1           goto state 77
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61
	Exp10          goto state 62

State 22


	'!'            shift, and enter state 64
	'('            shift, and enter state 65
	'++'           shift, and enter state 66
	'-'            shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 70
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp5           goto state 76
	Exp6           goto state 60
	Exp7           goto state 61
	Exp10          goto state 62

State 23


	'!'            shift, and enter state 64
	'('            shift, and enter state 65
	'++'           shift, and enter state 66
	'-'            shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 70
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp6           goto state 75
	Exp7           goto state 61
	Exp10          goto state 62

State 24


	'!'            shift, and enter state 64
	'('            shift, and enter state 65
	'++'           shift, and enter state 66
	'-'            shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 70
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp7           goto state 74
	Exp10          goto state 62

State 25


	'!'            shift, and enter state 64
	'('            shift, and enter state 65
	'++'           shift, and enter state 66
	'-'            shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 70
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp10          goto state 73

State 26


	'!'            shift, and enter state 64
	'('            shift, and enter state 65
	'++'           shift, and enter state 66
	'-'            shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 70
	L_quoted       shift, and enter state 30
	L_integ        shift, and enter state 71
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 33
	%eof           reduce using rule 99

	String         goto state 43
	Integer        goto state 44
	Double         goto state 45
	Id             goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp4           goto state 54
	Exp3           goto state 55
	Exp2           goto state 56
	Exp            goto state 57
	Exp1           goto state 58
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61
	Exp10          goto state 62
	ListExp        goto state 63

State 27


	'bool_undef'   shift, and enter state 35
	'boolean'      shift, and enter state 36
	'double'       shift, and enter state 37
	'false'        shift, and enter state 38
	'int'          shift, and enter state 39
	'string'       shift, and enter state 40
	'true'         shift, and enter state 41
	'void'         shift, and enter state 42

	Type           goto state 34

State 28


	L_Id           shift, and enter state 33

	Id             goto state 31
	ListId         goto state 32

State 29


	L_quoted       shift, and enter state 30


State 30

	String -> L_quoted .                                (rule 29)

	'!='           reduce using rule 29
	'%'            reduce using rule 29
	'&&'           reduce using rule 29
	')'            reduce using rule 29
	'*'            reduce using rule 29
	'+'            reduce using rule 29
	'++'           reduce using rule 29
	','            reduce using rule 29
	'-'            reduce using rule 29
	'--'           reduce using rule 29
	'/'            reduce using rule 29
	';'            reduce using rule 29
	'<'            reduce using rule 29
	'<='           reduce using rule 29
	'='            reduce using rule 29
	'=='           reduce using rule 29
	'>'            reduce using rule 29
	'>='           reduce using rule 29
	'||'           reduce using rule 29
	%eof           reduce using rule 29


State 31

	ListId -> Id .                                      (rule 110)
	ListId -> Id . ',' ListId                           (rule 111)

	','            shift, and enter state 153
	';'            reduce using rule 110
	'='            reduce using rule 110
	%eof           reduce using rule 110


State 32

	%start_pListId -> ListId .                          (rule 28)

	%eof           accept


State 33

	Id -> L_Id .                                        (rule 32)

	'!='           reduce using rule 32
	'%'            reduce using rule 32
	'&&'           reduce using rule 32
	'('            reduce using rule 32
	')'            reduce using rule 32
	'*'            reduce using rule 32
	'+'            reduce using rule 32
	'++'           reduce using rule 32
	','            reduce using rule 32
	'-'            reduce using rule 32
	'--'           reduce using rule 32
	'/'            reduce using rule 32
	';'            reduce using rule 32
	'<'            reduce using rule 32
	'<='           reduce using rule 32
	'='            reduce using rule 32
	'=='           reduce using rule 32
	'>'            reduce using rule 32
	'>='           reduce using rule 32
	'||'           reduce using rule 32
	%eof           reduce using rule 32


State 34

	%start_pType -> Type .                              (rule 27)

	%eof           accept


State 35

	Type -> 'bool_undef' .                              (rule 108)

	L_Id           reduce using rule 108
	%eof           reduce using rule 108


State 36

	Type -> 'boolean' .                                 (rule 109)

	L_Id           reduce using rule 109
	%eof           reduce using rule 109


State 37

	Type -> 'double' .                                  (rule 105)

	L_Id           reduce using rule 105
	%eof           reduce using rule 105


State 38

	Type -> 'false' .                                   (rule 103)

	L_Id           reduce using rule 103
	%eof           reduce using rule 103


State 39

	Type -> 'int' .                                     (rule 104)

	L_Id           reduce using rule 104
	%eof           reduce using rule 104


State 40

	Type -> 'string' .                                  (rule 107)

	L_Id           reduce using rule 107
	%eof           reduce using rule 107


State 41

	Type -> 'true' .                                    (rule 102)

	L_Id           reduce using rule 102
	%eof           reduce using rule 102


State 42

	Type -> 'void' .                                    (rule 106)

	L_Id           reduce using rule 106
	%eof           reduce using rule 106


State 43

	Exp15 -> String .                                   (rule 58)

	'!='           reduce using rule 58
	'%'            reduce using rule 58
	'&&'           reduce using rule 58
	')'            reduce using rule 58
	'*'            reduce using rule 58
	'+'            reduce using rule 58
	'++'           reduce using rule 58
	','            reduce using rule 58
	'-'            reduce using rule 58
	'--'           reduce using rule 58
	'/'            reduce using rule 58
	';'            reduce using rule 58
	'<'            reduce using rule 58
	'<='           reduce using rule 58
	'='            reduce using rule 58
	'=='           reduce using rule 58
	'>'            reduce using rule 58
	'>='           reduce using rule 58
	'||'           reduce using rule 58
	%eof           reduce using rule 58


State 44

	Exp15 -> Integer .                                  (rule 59)

	'!='           reduce using rule 59
	'%'            reduce using rule 59
	'&&'           reduce using rule 59
	')'            reduce using rule 59
	'*'            reduce using rule 59
	'+'            reduce using rule 59
	'++'           reduce using rule 59
	','            reduce using rule 59
	'-'            reduce using rule 59
	'--'           reduce using rule 59
	'/'            reduce using rule 59
	';'            reduce using rule 59
	'<'            reduce using rule 59
	'<='           reduce using rule 59
	'='            reduce using rule 59
	'=='           reduce using rule 59
	'>'            reduce using rule 59
	'>='           reduce using rule 59
	'||'           reduce using rule 59
	%eof           reduce using rule 59


State 45

	Exp15 -> Double .                                   (rule 60)

	'!='           reduce using rule 60
	'%'            reduce using rule 60
	'&&'           reduce using rule 60
	')'            reduce using rule 60
	'*'            reduce using rule 60
	'+'            reduce using rule 60
	'++'           reduce using rule 60
	','            reduce using rule 60
	'-'            reduce using rule 60
	'--'           reduce using rule 60
	'/'            reduce using rule 60
	';'            reduce using rule 60
	'<'            reduce using rule 60
	'<='           reduce using rule 60
	'='            reduce using rule 60
	'=='           reduce using rule 60
	'>'            reduce using rule 60
	'>='           reduce using rule 60
	'||'           reduce using rule 60
	%eof           reduce using rule 60


State 46
